# fashion-category-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py
.dvc/: .gitignore  config
configs/data/: data.yaml
configs/model/: model.yaml
configs/train/: train.yaml
data/: test.csv.dvc  train.csv.dvc
fashion_category_prediction/: infer_pipeline.py  train_pipeline.py
fashion_category_prediction/data/: datamodule.py
fashion_category_prediction/models/: rnn.py
